# Equipo2

./: Alumno.cpp  Alumno.h  CMakeLists.txt  Escuela.cpp  Escuela.h  Maestro.cpp  Maestro.h  Materia.cpp  Materia.h  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h  alumnos.txt  main.cpp  personasIniciales.txt  profesores.txt
